[project]
name = "symsrv"
version = "0.1.0"
description = "Python symbol server caching proxy"
authors = [
	{ name = "Steven Noonan", email = "steven@uplinklabs.net" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"aiofiles (>=24.1.0,<25.0.0)",
	"aiohttp (>=3.11.18,<4.0.0)",
	"anyio (>=4.8.0,<5.0.0)",
	"certifi (>=2025.4.26,<2026.0.0)",
	"fastapi (>=0.116.0,<0.117.0)",
	"httptools (>=0.6.4,<0.7.0)",
	"pyyaml (>=6.0.2,<7.0.0)",
	"starlette (>=0.47.0,<0.48.0)",
	"tomlkit (>=0.13.2,<0.14.0)",
	"uvicorn (>=0.35.0,<0.36.0)",
	"websockets (>=15.0.1,<16.0)",
]

[project.optional-dependencies]
profiling = [
	"pyinstrument (>=5.0.1,<6.0.0)",
]

[project.scripts]
serve = "symsrv:main"

[tool.poetry.group.dev.dependencies]
mypy = "~1"
pylint = "~3"
black = "~24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
install_types = true
non_interactive = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
exclude = ['.venv']
