[project]
name = "symsrv"
version = "1.0.0"
description = "Python symbol server caching proxy"
authors = [
	{ name = "Steven Noonan", email = "steven@uplinklabs.net" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"aiofiles (>=24.1.0,<25.0.0)",
	"aiohttp[speedups]>=3.11.18,<4.0.0",
	"aiosqlite>=0.21.0",
	"anyio (>=4.8.0,<5.0.0)",
	"certifi (>=2025.4.26,<2026.0.0)",
	"fastapi (>=0.116.0,<0.117.0)",
	"httptools (>=0.6.4,<0.7.0)",
	"pyyaml (>=6.0.2,<7.0.0)",
	"starlette (>=0.47.0,<0.48.0)",
	"tomlkit (>=0.13.2,<0.14.0)",
	"uvicorn (>=0.35.0,<0.36.0)",
	"websockets (>=15.0.1,<16.0)",
]

[project.optional-dependencies]
profiling = [
	"pyinstrument (>=5.0.1,<6.0.0)",
]

[project.scripts]
serve = "symsrv:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.17.1",
    "pyinstrument>=5.1.1",
    "pylint>=3.3.8",
    "types-aiofiles>=24.1.0.20250822",
    "types-pyyaml>=6.0.12.20250822",
    "types-ujson>=5.10.0.20250822",
    "viztracer>=1.0.4",
]

[tool.mypy]
install_types = true
non_interactive = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
exclude = ['.venv']
