[project]
name = "symsrv"
version = "1.0.0"
description = "Python symbol server caching proxy"
authors = [
	{ name = "Steven Noonan", email = "steven@uplinklabs.net" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
	"aiofiles (>=25.1.0,<26.0.0)",
	"aiohttp[speedups]>=3.13.3,<4.0.0",
	"aiosqlite>=0.22.1",
	"anyio (>=4.12.1,<5.0.0)",
	"certifi (>=2026.1.4,<2027.0.0)",
	"fastapi (>=0.128.0,<0.129.0)",
	"httptools (>=0.7.1,<0.8.0)",
	"pyyaml (>=6.0.2,<7.0.0)",
	"starlette (>=0.50.0,<0.53.0)",
	"tomlkit (>=0.14.0,<0.15.0)",
	"uvicorn (>=0.40.0,<0.41.0)",
	"websockets (>=16.0,<17.0)",
]

[project.optional-dependencies]
profiling = [
	"pyinstrument (>=5.1.2,<6.0.0)",
]

[project.scripts]
serve = "symsrv:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black>=26.0.0",
    "mypy>=1.19.1",
    "pyinstrument>=5.1.2",
    "pylint>=4.0.4",
    "types-aiofiles>=25.1.0.20251011",
    "types-pyyaml>=6.0.12.20250915",
    "types-ujson>=5.10.0.20250822",
    "viztracer>=1.1.1",
]

[tool.mypy]
install_types = true
non_interactive = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
exclude = ['.venv']
